AI-JADEDEVS4/src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>ARCHIVE_List_Price__c</fullName>
        <label>List Price (Archived)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ARCHIVE_Net_Unit_Price__c</fullName>
        <formula>UnitPrice * (1-Discount)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Unit Price (Archived)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ARCHIVE_Total_Discount_Amount__c</fullName>
        <label>Total Discount Amount (Archived)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ARCHIVE_Unit_Price__c</fullName>
        <label>Unit Price (Archived)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Celigo_Product_Group_Internal_Order__c</fullName>
        <label>Celigo Product Group Internal Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Celigo_Product_Group_Quantity__c</fullName>
        <label>Product Group Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Configuration_and_Term_Discount__c</fullName>
        <label>Configuration and Term Discount - OP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Converted_to_Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted to Asset?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Longer Description</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Has_OpenAir_Project__c</fullName>
        <formula>LEN(OpenAir_Project_SFDC_Id__c) &lt;&gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has OpenAir Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InstallmentKey__c</fullName>
        <externalId>true</externalId>
        <label>Installment Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Currency_Valid__c</fullName>
        <formula>IF( TEXT(CurrencyIsoCode) = TEXT(Opportunity.CurrencyIsoCode), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Currency Valid?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NetSuite_project_Id__c</fullName>
        <description>Used in Celigo Salesforce &amp; NetSuite connector.</description>
        <label>NetSuite project Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Amount__c</fullName>
        <label>Total Price (after Discount)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_ID__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OpenAir_Project_SFDC_Id__c</fullName>
        <description>Auto create OpenAir Project record when Opportunity Stage is changed to Sent to orders AND Product Revenue Type = Services-Time and Materials OR Services- Excluding Time and Materials. Script then writes OpenAir Project Id to this field</description>
        <inlineHelpText>Auto create OpenAir Project record when Opportunity Stage is changed to Sent to orders AND Product Revenue Type = Services-Time and Materials OR Services- Excluding Time and Materials. Script then writes OpenAir Project Id to this field</inlineHelpText>
        <label>OpenAir Project SFDC Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Touch__c</fullName>
        <description>To help with touching object</description>
        <label>Opportunity Product Touch</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Exceptional_Discounts__c</fullName>
        <label>Other/Exceptional Discounts - OP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PS_Hours__c</fullName>
        <formula>IF(AND(ISPICKVAL(PricebookEntry.Product2.Revenue_Type__c, &apos;Service&apos;), AND(ISPICKVAL(PricebookEntry.Product2.Type__c, &apos;T&amp;M&apos;), NOT(ISPICKVAL(PricebookEntry.Product2.SubType__c, &apos;Prepaid&apos;)))) , 
Quantity , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If Product Revenue Type is &apos;Services-Time and Materials&apos; then enter value from Product.Quantity; otherwise, 0</inlineHelpText>
        <label>PS Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product2_Product__c</fullName>
        <formula>TEXT( PricebookEntry.Product2.Product__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product2_Revenue_Type__c</fullName>
        <formula>TEXT( PricebookEntry.Product2.Revenue_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Revenue Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product2_Subtype__c</fullName>
        <formula>TEXT( PricebookEntry.Product2.SubType__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Subtype</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product2_Type__c</fullName>
        <formula>TEXT( PricebookEntry.Product2.Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <formula>CASESAFEID( PricebookEntry.Product2Id)</formula>
        <label>Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Type__c</fullName>
        <label>Revenue Type</label>
        <picklist>
            <picklistValues>
                <fullName>Subscription</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__ParentID__c</fullName>
        <inlineHelpText>ID of the opportunity product that came from this product&apos;s bundle.</inlineHelpText>
        <label>Parent ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote line that generated this Opportunity Product.</description>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>OpportunityProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_Order_Form_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sync Order Form Line Item</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>T_M_Services_Discount__c</fullName>
        <description>For Services (non-T&amp;M) Product Family List Price - Sales Price * Quantity</description>
        <formula>ListPrice  * Quantity-UnitPrice *  Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Services Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Discount_AI__c</fullName>
        <formula>SBQQ__QuoteLine__r.SBQQ__TotalDiscountRate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Discount (AI)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Discount__c</fullName>
        <formula>Configuration_and_Term_Discount__c  +  Other_Exceptional_Discounts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Discount - OP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>remove__c</fullName>
        <defaultValue>false</defaultValue>
        <label>remove</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sbaa__ApprovalStatus__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recalled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>